--- a/Case Converter/Upper or lower/task-info.yaml
+++ b/Case Converter/Upper or lower/task-info.yaml
@@ -155,8 +155,8 @@ feedback_link: https://hyperskill.org/learn/step/14000#comment
 status: Failed
 feedback:
   message: |-
-    Error: Failed: "Wrong answer in test #4
+    Error: Wrong answer in test #4
 
-    After clicking on 'Lower Case' button your text is wrong!"
-  time: Tue, 29 Mar 2022 19:13:42 UTC
+    After clicking on 'Sentence Case' button your text is wrong!
+  time: Sat, 16 Apr 2022 15:59:35 UTC
 record: -1
