--- a/Topics/Functions/The code inside the function/task-info.yaml
+++ b/Topics/Functions/The code inside the function/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
 is_multiple_choice: false
+options:
+- text: head
+- text: There's no name for it.
+- text: body
+- text: footer
 message_correct: Congratulations!
 message_incorrect: Incorrect solution
 files:
