--- a/Topics/Variables/Immutable variables/task-info.yaml
+++ b/Topics/Variables/Immutable variables/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
 is_multiple_choice: false
+options:
+- text: final
+- text: val
+- text: let
+- text: const
 message_correct: Congratulations!
 message_incorrect: Incorrect solution
 files:
