--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/555152/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 14 Apr 2022 15:48:13 UTC
+update_date: Sat, 16 Apr 2022 20:28:36 UTC
 stages:
 - id: 962
   step: 13999
   is_completed: true
 - id: 963
   step: 14000
-  is_completed: false
+  is_completed: true
 - id: 964
   step: 14001
   is_completed: false
